manifest.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: pod-mutation-deployment
  namespace: webhooks
  labels:
    name: pod-mutation-webhook
spec:
  replicas: 1
  template:
    metadata:
      name: pod-mutation-webhook 
      labels:
        type: webhook 
        name: pod-mutation-webhook
    spec:
      containers:
        - name: webhook
          image: pod-mutation-webhook:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 50Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: pod-mutation-webhook-certs
---
apiVersion: v1
kind: Service
metadata:
  name: pod-mutation-service
  namespace: webhooks
  labels:
    name: pod-mutation-webhook
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    type: webhook 
    name: pod-mutation-webhook
---
  
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: webhooks
webhooks:
  - name: webhook-server.mutation.svc
    clientConfig:
      service:
        name: webhook-server
        namespace: webhooks
        path: "/"
      caBundle: ${CA_BUNDLE}
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
